--- a/integration.html
+++ b/integration.html
@@ -1,11 +1,11 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
 <div class="calc_form">
+
     <div class="calc_settings">
       <div class="calc_field">
         <div class="calc_head">Взнос (страховая премия)</div>
-        <input id="usd_field" value="20 000 $" type="text" placeholder="20000" oninput="input_change(this.value);" onblur="input_blur(this.value);" onfocus="input_onfocus(this.value);">
-        <div class="calc_info"><span>1 000 – 40 000 $</span><span id="rubl">~ 2 774 504 ₽</span></div>
+        <input id="usd_field" value="20 000 $" type="text" placeholder="Взнос в $" oninput="input_change(this.value);" onblur="input_blur(this.value);" onfocus="input_onfocus(this.value);">
+        <div class="calc_info"><span>1 000 – 40 000 $</span><span id="rubl"></span></div>
         <input type="range" value="20000" id="usd_slider" name="usd_slider" oninput="slider_change(this.value);" min="1000" max="40000" step="100"> 
       </div>
       
@@ -35,15 +35,20 @@
         Оформить
       </button>
     </div>
+</div>
 
-  </div>
-  
-  <style>
- .calc_form *
+<style type="text/css">
+
+#usd_slider
+{
+  margin:12px 4px 12px 4px;
+}
+
+.calc_form *
  {
   padding:0;
   margin:0;
-  font-family:Gerbera;
+  font-family:Gerbera-Light, Gerbera;
   font-weight:300;
   outline:none;
   -webkit-box-sizing: border-box !important;
@@ -180,10 +185,6 @@
 
 @media (max-width: 1200px) {
 
-   .calc_devider
-  {
-    display: none;
-  }
 
   .calc_field
   {
@@ -192,7 +193,7 @@
 
 }
 
-@media (max-width: 959px) {
+@media (max-width: 900px) {
 
   .calc_switch-field
   {
@@ -257,6 +258,11 @@
 
 @media (max-width: 640px) {
 
+   .calc_devider
+  {
+    display: auto;
+  }
+
   .calc_income_block
   {
     width: 100%;
@@ -271,10 +277,14 @@
     height: 40px;
     padding: 0;
   }
-
 }
 
-@media (max-width: 480px) {
+@media (max-width: 460px) {
+
+   .calc_devider
+  {
+    display: none;
+  }
 
   .calc_income_block
   {
@@ -482,8 +492,7 @@ input[type=range]:focus::-ms-fill-upper {
 }
 </style>
 
-<script>
-
+<script> 
 var usd_field = document.getElementById("usd_field");
 var usd_slider = document.getElementById("usd_slider");
 var result = document.getElementById("result");
@@ -495,15 +504,15 @@ var year_income=0.02;
 var today_usd_value=0;
 
 $.getJSON('https://www.cbr-xml-daily.ru/daily_json.js', function(data) {
-    today_usd_value = data.Valute.USD.Previous;
-    console.log(data);
-});
-
-//usd_toggle = document.getElementById("");
+  today_usd_value = data.Valute.USD.Previous;console.log(data);
+  rubl.innerHTML = "~"+Math.floor(usd_slider.value*today_usd_value).toLocaleString()+" ₽";
+} );
 
 function slider_change(usd)
 {
   usd = usd.replace(/[^0-9]/g, '');
+  usd = parseInt(usd);
+  usd_slider.value = usd;
   usd_field.value = usd.toLocaleString()+" $";
 
   var result_c;
@@ -514,29 +523,32 @@ function slider_change(usd)
 
   result.innerHTML = result_c.toLocaleString()+" $";
   income.innerHTML = "+ " + income_c + " $ (+" + duration*year_income*100/12 + "%)";
-  rubl.innerHTML = "~"+Math.floor(usd*today_usd_value,-1).toLocaleString()+" ₽";
+  var rubl_с = Math.floor(usd*today_usd_value);
+
+  rubl.innerHTML = "~"+rubl_с.toLocaleString()+" ₽";
 }
 
 function input_change(usd)
 {
   usd = usd.replace(/[^0-9]/g, '');
+  usd_slider.value = parseInt(usd);
+
   var result_c;
   var income_c;
-  usd_slider.value = usd;
   
   if (usd<1000)
     {
       result.style.color = "red";
       result.innerHTML = "Минимальный взнос 1000$";
       income.innerHTML = "";
-      rubl.innerHTML = "~"+Math.floor(usd*today_usd_value,-1).toLocaleString()+" ₽";
+      rubl.innerHTML = "~"+Math.floor(usd*today_usd_value).toLocaleString()+" ₽";
     }
      else if (usd>40000)
   {
     result.style.color = "red";
       result.innerHTML = "Максимум 40 000$";
       income.innerHTML = "";
-      rubl.innerHTML = "~"+Math.floor(usd*today_usd_value,-1).toLocaleString()+" ₽";
+      rubl.innerHTML = "~"+Math.floor(usd*today_usd_value).toLocaleString()+" ₽";
   }
   else
     {
@@ -547,7 +559,7 @@ function input_change(usd)
 
       result.innerHTML = result_c.toLocaleString()+" $";
       income.innerHTML = "+ " + income_c + " $ (+" + duration*year_income*100/12 + "%)";
-      rubl.innerHTML = "~"+Math.floor(usd*today_usd_value,-1).toLocaleString()+" ₽";
+      rubl.innerHTML = "~"+Math.floor(usd*today_usd_value).toLocaleString()+" ₽";
     }
 }
 
@@ -603,37 +615,6 @@ function toggle_change(dur)
   
   result.innerHTML = Math.floor(result_c).toLocaleString()+" $";
   income.innerHTML = "+ " + Math.floor(income_c).toLocaleString() + " $ (+" + dur*year_income*100/12 + "%)";
-}
-
-function getJSONP(url, success) {
-
-    var ud = '_' + +new Date,
-        script = document.createElement('script'),
-        head = document.getElementsByTagName('head')[0] 
-               || document.documentElement;
-
-    window[ud] = function(data) {
-        head.removeChild(script);
-        success && success(data);
-    };
-
-    script.src = url.replace('callback=?', 'callback=' + ud);
-    head.appendChild(script);
-
-}
-
-
-/*
-let getXMLFile = function(path, callback){
-  let request = new XMLHttpRequest();
-  request.open("GET", path);
-  request.setRequestHeader("Content-Type","text/xml");
-  request.onreadystatechange = function(){
-    if (request.readyState === 4 && request.statys === 200){
-      callback(request.responseXML);
-    }
-  };
-  request.send();
-};*/
+};
 
 </script>
