--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Document</title>
+</head>
+<body>
+	
+
 <style>
 .rl_main_block
 {
@@ -102,7 +112,6 @@
 		<span class="rl_license">ООО СК «Ренессанс Жизнь» лицензия Банка России СЖ № 3972 от 11.05.2017. Продукт не является банковским депозитом.</span>
 	</div>
 </div>
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 
 <script type="text/javascript">
@@ -171,6 +180,10 @@ function rl_resize(className){
   rl_resize('.rl_main_block');
   $(window).resize(function(){rl_resize('.rl_main_block')});
 </script>
+</body>
+</html>
+
+
 
 
 
